<resources>
    <string name="app_name">Latihan 3</string>
    <string name="gambar_andro">gambar andro</string>
    <string name="_089699815847">089699815847</string>
    <string name="ikon_telfon">ikon telfon</string>
    <string name="ikon_email">ikon email</string>
    <string name="baitunnadhiroh1_gmail_com">baitunnadhiroh1@gmail.com</string>
    <string name="ds_tambak_beras_rt_2_rw_2">Ds. Tambak Beras RT 2 RW 2</string>
    <string name="ikon_map">ikon map</string>
    <string name="ubah">Ubah</string>
</resources>